fix: change gap at header

--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -71,7 +71,7 @@ body {
 .catalog-group {
     display: flex;
     align-items: center;
-    gap: 12px;
+    gap: 13px;
     flex-shrink: 0;
 }
 .logo-text {
